fixed events page on ios devices

--- a/src/styles/components/_events.scss
+++ b/src/styles/components/_events.scss
@@ -41,12 +41,6 @@
 			gap: 1em;
 			grid-template-columns: 4fr 3fr;
 
-			max-width: 45em;
-
-			@include ab.screen-75 {
-				max-width: 100%;
-			}
-
 			&:first-child {
 				img {
 					object-position: 70% 0;
@@ -57,6 +51,8 @@
 					grid-template-columns: 1fr;
 
 					.events-container__item-img {
+						max-height: 100%;
+
 						img {
 							height: 100%;
 						}
@@ -66,14 +62,18 @@
 						color: ab.$white;
 						text-decoration-color: transparent;
 						background-color: ab.$blue1;
+						border: 0.15em solid ab.$blue1;
 
 						padding: 0.5em 2em;
 						font-size: 1.1rem;
 
-						transition: text-decoration-color 200ms;
+						transition: text-decoration-color 200ms,
+							background-color 200ms, color 200ms;
 
 						&:hover {
-							text-decoration-color: ab.$white;
+							text-decoration-color: ab.$blue1;
+							background-color: ab.$blue3;
+							color: ab.$blue1;
 						}
 						svg {
 							display: none;
@@ -89,6 +89,8 @@
 			}
 
 			&-img {
+				max-height: 17em;
+
 				img {
 					height: min(100%, 17em);
 					object-fit: cover;
