--- a/src/styles/components/_info-page.scss
+++ b/src/styles/components/_info-page.scss
@@ -176,6 +176,7 @@
 
 				h3 {
 					font-size: clamp(1.15rem, 3vw, 1.35rem);
+					text-transform: capitalize;
 				}
 
 				p {
